# EllDet

./: README.md
code/: CMakeLists.txt
code/src/: CurveSimplifier.cpp  CurveSimplifier.h  EdgeDetector.cpp  EdgeDetector.h  Ellipse.h  EllipseDetector.cpp  EllipseDetector.h  main.cpp  util.cpp  util.h
datasets/: Iris.7z
tools/label/: Ellipse.cs  Form1.Designer.cs  Form1.cs  PictureListData.cs  Program.cs  myy label cs.csproj  myy label cs.sln
tools/label/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
